feat(notebook): validate local note additions